--- a/Crud.RabbitMQ.Dominio/Crud.RabbitMQ.Dominio.csproj
+++ b/Crud.RabbitMQ.Dominio/Crud.RabbitMQ.Dominio.csproj
@@ -11,4 +11,12 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="110.2.0" />
+  </ItemGroup>
+
 </Project>
