--- a/Crud.RabbitMQ.API/appsettings.json
+++ b/Crud.RabbitMQ.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "Connection": "Data Source=localhost;Initial Catalog=CrudRabbitMQ;User ID=sa;Password=<SqlServerDocker!>;Connect Timeout=15; Pooling=false; Packet Size=1024;TrustServerCertificate=True",
+    "ProviderName": "System.Data.SqlClient"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
