--- a/Crud.RabbitMQ.Infra/Crud.RabbitMQ.Infra.csproj
+++ b/Crud.RabbitMQ.Infra/Crud.RabbitMQ.Infra.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Crud.RabbitMQ.Bus\Crud.RabbitMQ.Bus.csproj" />
     <ProjectReference Include="..\Crud.RabbitMQ.Dominio\Crud.RabbitMQ.Dominio.csproj" />
     <ProjectReference Include="..\Crud.RabbitMQ.Service\Crud.RabbitMQ.Service.csproj" />
   </ItemGroup>
