Implementado exemplo de publicação de fila pela controle weatherForecastController

--- a/Crud.RabbitMQ.API/appsettings.json
+++ b/Crud.RabbitMQ.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "Connection": "Data Source=localhost;Initial Catalog=CrudRabbitMQ;User ID=sa;Password=<SqlServerDocker!>;Connect Timeout=15; Pooling=false; Packet Size=1024;TrustServerCertificate=True",
-    "MessageBus": "host=127.0.0.1:5672;virtualhost=/;username=guest;password=guest",
+    "MessageBus": "host=127.0.0.1:5672;virtualhost=crud;username=guest;password=guest",
     "ProviderName": "System.Data.SqlClient"
   },
 
