--- a/Crud.RabbitMQ.Bus/Crud.RabbitMQ.Bus.csproj
+++ b/Crud.RabbitMQ.Bus/Crud.RabbitMQ.Bus.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Polly" Version="8.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Crud.RabbitMQ.Dominio\Crud.RabbitMQ.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
